[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=60",
]

[project]
name = "wfde5-flux-era5-source"
version = "0.1.0"
description = "Source plugin for Anemoi datasets that makes WFDE5 flux data behave like ERA5 end-of-interval fluxes by adjusting metadata timestamps while leaving the underlying values unchanged."
readme = "README.md"
requires-python = "==3.12.*"

authors = [
  { name = "Niclas Rieger", email = "niclas.rieger@ecmwf.int" },
]

license = "Apache-2.0"

keywords = [
  "anemoi",
  "datasets",
  "era5",
  "wfde5",
  "source-plugin",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]

dependencies = [
  "anemoi-datasets",
  "anemoi-transform",
  "anemoi-utils>=0.5",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[project.urls]
Repository = "https://github.com/nicrie/wfde5-flux-era5-source"

[project.entry-points."anemoi.datasets.create.sources"]
wfde5-flux-era5-time = "wfde5_flux_era5_source.wfde5_flux_era5_time:Wfde5FluxEra5TimePlugin"

[dependency-groups]
dev = [
  "pytest>=9.0.3",
]